# fastapi-todo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
classes/api/: GetTodos.py
db/: migrate.py  models.py
docker/: docker-compose.yml
routers/: todos_router.py
src/: alembic.ini  alembic_cli.py  main.py
src/classes/api/: Todos.py
src/classes/errors/: DB.py
src/db/: database.py  models.py
src/repositories/: todo_repository.py
src/routers/: todos_router.py
src/usecases/: todo_usecase.py
src/utils/: custom_formatter.py
utils/: custom_formatter.py
