[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = "Template project"
authors = ["totodev999"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "classes", from = "src" },
    { include = "db", from = "src" },
    { include = "routers", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
alembic = "1.14.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.12.14"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
click = "8.1.8"
crashtest = "0.4.1"
distlib = "0.3.9"
dnspython = "2.7.0"
dulwich = "0.21.7"
email-validator = "2.2.0"
fastapi = "0.115.6"
fastapi-cli = "0.0.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.28.1"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.5"
keyring = "24.3.1"
mako = "1.3.8"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
packaging = "24.2"
pexpect = "4.9.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
psycopg2-binary = "2.9.10"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.10.4"
pydantic-core = "2.27.2"
pygments = "2.18.0"
pyproject-hooks = "1.2.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
rapidfuzz = "3.11.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rich-toolkit = "0.12.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
sqlmodel = "0.0.22"
starlette = "0.41.3"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
typer = "0.15.1"
typing-extensions = "4.12.2"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
uvloop = "0.21.0"   
virtualenv = "20.28.0"
watchfiles = "1.0.3"
websockets = "14.1"
xattr = "1.1.0"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
